--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=adgj1357
+DB_PASSWORD= <-- Database Password -->
 DB_DATABASE=task-management
 JWT_SECRET=*Dk@e/Z+8<L2;p@Q$=?77?kH.Re:<cw22\/GVK\[z@CMZJ{AP9)"2Er/G~;5nC5k
 
